--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,6 @@
             <version>0.6</version>
         </dependency>
         <dependency>
-            <groupId>org.tpolecat</groupId>
-            <artifactId>doobie-core_2.12</artifactId>
-            <version>1.0.0-RC2</version>
-        </dependency>
-        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.32</version>
@@ -39,6 +34,16 @@
         <dependency>
             <groupId>org.mongodb.scala</groupId>
             <artifactId>mongo-scala-driver_2.12</artifactId>
+            <version>4.10.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-reactivestreams</artifactId>
+            <version>4.10.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb.scala</groupId>
+            <artifactId>mongo-scala-bson_2.12</artifactId>
             <version>4.10.2</version>
         </dependency>
 
